[gd_scene load_steps=25 format=3 uid="uid://by6wb574urfni"]

[ext_resource type="Texture2D" uid="uid://b6byqdfrgmj38" path="res://assets/dices/dice_6side_full.png" id="1_2siag"]
[ext_resource type="Texture2D" uid="uid://cpjy42nwnvu0j" path="res://assets/dices/dice_6side_4.png" id="1_yjmoo"]
[ext_resource type="Script" path="res://scripts/dice_6_sided.gd" id="2_6ilnp"]
[ext_resource type="Texture2D" uid="uid://dalont058l0pj" path="res://assets/dices/dice_6side_2.png" id="2_f0fwd"]
[ext_resource type="Texture2D" uid="uid://c2h6xa3n8cs13" path="res://assets/dices/dice_6side_1.png" id="2_nau6g"]
[ext_resource type="Texture2D" uid="uid://bcu7hyfxv4gi4" path="res://assets/dices/dice_6side_6.png" id="3_tflmb"]
[ext_resource type="Texture2D" uid="uid://bpir8f4jc0icg" path="res://assets/dices/dice_6side_3.png" id="3_uwbn8"]
[ext_resource type="Texture2D" uid="uid://coo812d0r3nfg" path="res://assets/dices/dice_6side_5.png" id="8_tvk82"]

[sub_resource type="AtlasTexture" id="AtlasTexture_264tt"]
atlas = ExtResource("2_nau6g")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_41ea1"]
atlas = ExtResource("2_f0fwd")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvrw3"]
atlas = ExtResource("3_uwbn8")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0obk"]
atlas = ExtResource("1_yjmoo")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d41c"]
atlas = ExtResource("1_2siag")
region = Rect2(0, 76, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_fffp6"]
atlas = ExtResource("3_tflmb")
region = Rect2(0, 0, 38, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_b8n2n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_264tt")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_41ea1")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvrw3")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0obk")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d41c")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fffp6")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fnncx"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_byjla"]
texture = ExtResource("3_tflmb")

[sub_resource type="AtlasTexture" id="AtlasTexture_bxnvt"]
atlas = ExtResource("1_2siag")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvqnv"]
atlas = ExtResource("2_f0fwd")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_chvb3"]
atlas = ExtResource("3_uwbn8")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r67o"]
atlas = ExtResource("1_yjmoo")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi484"]
atlas = ExtResource("8_tvk82")
region = Rect2(0, 0, 38, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv2j7"]
atlas = ExtResource("3_tflmb")
region = Rect2(0, 0, 38, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_pnr1c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxnvt")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvqnv")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chvb3")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r67o")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi484")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv2j7")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}]

[node name="Dice6Sided" type="AnimatedSprite2D"]
position = Vector2(425, 314)
scale = Vector2(4.92105, 5.47368)
sprite_frames = SubResource("SpriteFrames_b8n2n")
animation = &"6"
autoplay = "5"
script = ExtResource("2_6ilnp")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
offset_left = -15.6471
offset_top = -16.2596
offset_right = 20.3529
offset_bottom = 20.7404
theme_override_styles/panel = SubResource("StyleBoxFlat_fnncx")

[node name="DiceShadow" type="Panel" parent="."]
modulate = Color(0.0313726, 0.0313726, 0.0313726, 0.556863)
show_behind_parent = true
offset_left = -11.5829
offset_top = -8.76923
offset_right = 30.4171
offset_bottom = 29.2308
theme_override_styles/panel = SubResource("StyleBoxTexture_byjla")

[node name="RollButton" type="Button" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.6471
offset_top = 43.8462
offset_right = -15.6471
offset_bottom = 36.8462
grow_horizontal = 2
grow_vertical = 2
text = "Roll"

[node name="DiceRightSide" type="AnimatedSprite2D" parent="."]
modulate = Color(0.568973, 0.568973, 0.568973, 1)
show_behind_parent = true
position = Vector2(21.9465, 3.65385)
rotation = 1.5708
scale = Vector2(0.903876, 0.284322)
skew = 0.965167
sprite_frames = SubResource("SpriteFrames_pnr1c")
animation = &"6"
autoplay = "1"

[node name="DiceBottomSide" type="AnimatedSprite2D" parent="."]
modulate = Color(0.753984, 0.753984, 0.753984, 1)
position = Vector2(3.08846, 20.4253)
rotation = -2.13105
scale = Vector2(0.252878, 0.983503)
skew = 0.55676
sprite_frames = SubResource("SpriteFrames_pnr1c")
animation = &"1"

[connection signal="pressed" from="RollButton" to="." method="_on_roll_button_pressed"]
